codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mixed_running_hooks_share_background_activity_row.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"80 columns:\\n{}\\n120 columns:\\n{}\", hook_status_frame(&chat, 80),\nhook_status_frame(&chat, 120),)"
---
80 columns:
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"  └ Running hooks                                                               "
"                                                                                "
"                                                                                "
"› Describe a task                                                               "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
120 columns:
"                                                                                                                        "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view · /stop to close · Running hooks        "
"                                                                                                                        "
"                                                                                                                        "
"› Describe a task                                                                                                       "
"                                                                                                                        "
"  GPT-5.6-Sol default · /tmp/project                                                                                    "
